[workspace]
resolver = "2"
members = [
	"cli",
	"wallet",
	"wallet/bindings/java/lib/native",
	"wallet/bindings/nodejs",
	"wallet/bindings/python",
	"wallet/bindings/swift",
	"wallet/bindings/wasm"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
panic = "abort"
strip = "symbols"