[package]
name = "iota-wallet"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "A stateful package for IOTA value transactions"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = ["iota", "wallet", "transaction"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = {version = "0.1.51", default-features = false }
backtrace = {version = "0.3.62", default-features = false }
bee-common = { version = "0.5.0", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
futures = { version = "0.3.17", default-features = false }
getset = { version = "0.1.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "f3e3fba11a2a0a21dc62df5c612414856cfceeb0", default-features = false, features = ["async", "mqtt", "tls"] }
log = { version = "0.4.14", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
rand = { version = "0.8.4", default-features = false }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "c62c8c248d84cd1dfb2f48b078ee4f6d55f9dc69", default-features = false, features = ["lz4"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
serde_repr = { version = "0.1.7", default-features = false }
thiserror = { version = "1.0.29", default-features = false }
tokio = { version = "1.12.0", default-features = false, features = ["macros"]}
url = { version = "2.2.2", default-features = false, features = ["serde"] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }

# stronghold
iota_stronghold = { git = "https://github.com/iotaledger/stronghold.rs", branch = "0.4.2", default-features = false }
riker = { version = "0.4.2", default-features = false }
slog = { version = "2.7.0", default-features = false }

# ledger hardware wallets
iota-ledger = { git = "https://github.com/iotaledger/ledger.rs", rev = "50d6d3eb2d6b31c11061016bd2f559c8366b7c46", default-features = false, optional = true }

# migration
bytemuck = { version = "1.5.1", default-features = false }
iota-migration = { git = "https://github.com/iotaledger/iota.rs", rev = "656279e628e5f9d9288477cd4d2dc4170ea4bf0e", default-features = false, package = "iota-core" }

# participation
reqwest = { version = "0.11.6", default-features = false, features = ["json"], optional = true }

iota-crypto = { version = "0.23.0", default-features = false, features = ["random", "sha", "pbkdf2", "hmac", "bip39", "bip39-en", "chacha", "blake2b", "slip10"]}

[dev-dependencies]
anyhow = { version = "1.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rusty-fork = { version = "0.3", default-features = false }
tokio = { version = "1.5", default-features = false, features = ["full"] }
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = { version = "1.0", default-features = false }

[features]
default = ["stronghold"]
ledger-nano = ["iota-ledger"]
ledger-nano-simulator = ["iota-ledger"]
stronghold = []
participation = ["reqwest"]

[[example]]
name = "migrate_stronghold_snapshot_v2_to_v3"
path = "examples/migrate_stronghold_snapshot_v2_to_v3.rs"
required-features = [ "stronghold" ]