[package]
name = "iota-wallet-actor"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
iota-wallet = { path = "../" }
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
serde = "1.0"
futures = "0.3"
backtrace = "0.3"
