[package]
name = "chronicle-iota-wallet"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
chronicle-common = { git = "https://github.com/iotaledger/chronicle.rs" }
iota-wallet = { path = ".." }
serde = "1.0"
