[package]
name = "iota-client-mock"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"

[lib]
name = "iota_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iota-conversion = "0.5"
bee-signing = { git = "https://github.com/lucasfernog/bee-p", branch = "feat/serialize" }
bee-crypto = { git = "https://github.com/lucasfernog/bee-p", branch = "feat/serialize" }
bee-transaction = { git = "https://github.com/lucasfernog/bee-p", branch = "feat/serialize" }
bee-ternary = { git = "https://github.com/iotaledger/bee", features = ["serde1"] }
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
