[package]
name = "wallet-tester"
version = "0.0.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/wallet.rs"
description = "Test engine for wallet.rs"
license = "Apache-2.0"
keywords = [ "iota", "wallet", "test" ]

[[bin]]
name = "wallet-tester"
path = "src/main.rs"

[dependencies]
iota-wallet = { version = "1.0.0-rc.1", path = "../", default-features = false }

[profile.release]
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
