[package]
name = "nodejs-async"
version = "0.1.0"
description = "Node.js binding to the wallet library"
authors = ["Antoni Dikov <antoni.dikov@iota.org>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6", "event-queue-api"]

[dependencies]
iota-wallet = { path = "../../", version = "0.1.0", features = ["stronghold"] }
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "57c5a33d83be4b8286a54156e9f0d2ac4345e9b9", features = ["mqtt"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
once_cell = "1.7"
rand = "0.8"
tokio = { version = "1.5", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
backtrace = "0.3"
hex = "0.4"
url = "2.2"
bee-message = "0.1.1"
log = "0.4"