[package]
# NOTE: cargo-cp-artifact reads the name of crate for artifacts, so the name of
# this crate stays the same as the one specified in `package.json`.
name = "wallet"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Node.js bindings for the IOTA wallet library"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = ["iota", "wallet", "transaction", "nodejs"]
categories = ["cryptography::cryptocurrencies"]
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
backtrace = { version = "0.3.62", default-features = false }
bee-common = { version = "0.4.1", default-features = false }
bee-message = { version = "0.1.5", default-features = false }
futures = { version = "0.3.17", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-wallet = { path = "../../", version = "0.2.0", default-features = false, features = ["stronghold"] }
log = { version = "0.4.14", default-features = false }
neon = { version = "0.10.1", default-features = false, features = ["napi-6", "event-queue-api"] }
once_cell = { version = "1.8.0", default-features = false }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.68", default-features = false }
serde_repr = { version = "0.1.7", default-features = false }
tokio = { version = "1.12.0", default-features = false }
url = { version = "2.2.2", default-features = false }
