[package]
name = "iota-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "staticlib" ]      # Creates dynamic lib

[dependencies]
iota-wallet = { path = "../../", features = [ "message_interface", "events" ] }

futures =  { version = "0.3.25", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
serde = { version = "1.0.149", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.89", default-features = false }
tokio = { version = "1.22.0", default-features = false }
