[package]
name = "iota-wallet-java"
version = "0.3.0"
authors = ["Brord van Wierst <brord@iota.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
iota-wallet = { path = "../../../", version = "0.2.0" }
bee-message = { version  = "0.1.5", default-features = false }
log = { version = "0.4.14", default-features = false }
chrono = { version = "0.4.19", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
anyhow = { version = "1.0.38", default-features = false }
hex = { version = "0.4.3", default-features = false }

# Generating bindings
jni = "0.19" 
flapigen = { git = "https://github.com/Dushistov/flapigen-rs" }
getset = { version = "0.1.1", default-features = false }

# await block_on etc management
tokio = { version = "1.12.0", default-features = false }
once_cell = { version = "1.8", default-features = false }
futures = { version = "0.3.17", default-features = false }

# Needed for serialization
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.68", default-features = false }

[lib]
crate_type = ["dylib"]

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs" }
env_logger = "0.9.0"
bindgen = "0.59.1"

[features]
default = ["stronghold"]
stronghold = ["iota-wallet/stronghold"]
ledger-nano = ["iota-wallet/ledger-nano"]
ledger-nano-simulator = ["iota-wallet/ledger-nano-simulator"]
