[package]
name = "iota-wallet-java"
version = "0.3.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Java bindings for the IOTA wallet library"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = ["iota", "wallet", "transaction", "java"]
categories = ["cryptography::cryptocurrencies"]
build = "build.rs"

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.38", default-features = false }
bee-message = { version  = "0.1.5", default-features = false }
chrono = { version = "0.4.19", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-wallet = { path = "../../../", version = "1.0.0-beta.1" }
log = { version = "0.4.14", default-features = false }

# Generating bindings
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", default-features = false }
getset = { version = "0.1.1", default-features = false }
jni = { version = "0.19", default-features = false }

# await block_on etc management
futures = { version = "0.3.17", default-features = false }
once_cell = { version = "1.8", default-features = false }
tokio = { version = "1.12.0", default-features = false }

# Needed for serialization
serde = { version = "1.0.137", default-features = false }
serde_json = { version = "1.0.68", default-features = false }

[build-dependencies]
bindgen = { version = "0.59.1", default-features = false, features = ["runtime"] }
env_logger = { version = "0.9.0", default-features = false }
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", default-features = false }

[features]
default = ["stronghold"]
stronghold = ["iota-wallet/stronghold"]
ledger_nano = ["iota-wallet/ledger_nano"]
ledger_nano-simulator = ["iota-wallet/ledger_nano-simulator"]
