[package]
name = "iota-wallet-nodejs-binding"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_binding"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
iota-wallet = { path = "../../../", version = "0.1.0" }
serde = "1.0"
serde_json = "1.0"
neon-serde = "0.4"
once_cell = "1.4"
tokio = "0.2"
futures = "0.3"
backtrace = "0.3"
hex = "0.4"
