[package]
name = "iota-wallet-nodejs-binding"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_binding"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "=0.4.0"

[dependencies]
neon = "=0.4.0"
iota-wallet = { path = "../../../", version = "0.1.0", features = ["stronghold"] }
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "a9862e0d1f860b27052ac9834a2441fac6730e74", features = ["mqtt"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
neon-serde = "0.4"
once_cell = "1.7"
rand = "0.8"
tokio = { version = "1.3", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
backtrace = "0.3"
hex = "0.4"
url = "2.2"
bee-message = "0.1.1"