[package]
name = "iota-wallet-python"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Python bindings for the IOTA wallet library"
documentation = "https://wiki.iota.org/wallet.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/wallet.rs"
license = "Apache-2.0"
keywords = ["iota", "wallet", "transaction", "python"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "iota_wallet"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.19", default-features = false }
dict_derive = "0.3.0"
futures = { version = "0.3.17", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "c7d1cc4bae4ef00f16314239463ce115f8c6b35a", default-features = false, features = ["async", "mqtt"] }
iota-wallet = { path = "../../../", version = "0.2.0", features = ["stronghold", "ledger-nano", "ledger-nano-simulator"] }
once_cell = { version = "1.8.0", default-features = false }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
tokio = { version = "1.12.0", default-features = false }
url = { version = "2.2.2", default-features = false }

[dependencies.pyo3]
version = "0.13"
features = ["extension-module", "abi3-py36"]
